cmake_minimum_required(VERSION 2.8)
project(video_output)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("/Users/yan/data/sdks/leap_sdk/LeapSDK/include")
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS})
find_package(GLUT REQUIRED)
include_directories(${GLUT_INCLUDE_DIRS})
find_package(Leap REQUIRED)
include_directories(${LEAP_INCLUDE_DIRS})
add_executable(video_output video_output.cc field_line.cc Quaternion.cc hand_input_listener.cc pen_line.cc)
target_link_libraries(video_output ${OpenCV_LIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${LEAP_LIBRARIES})
